--- a/resources/stylesheets.css
+++ b/resources/stylesheets.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   background-color: #15836D;
-  color: #eeeeee;
+  color: #e0e0e0;
   font-family: arial, sans-serif;
 }
 
@@ -11,16 +11,16 @@ body {
 
 header {
   background-color: #00503a;
-  padding-top: 30px;
+  padding-top: 1px;
   padding-bottom: 30px;
   text-align: center;
   margin-bottom: 30px;
 }
 
 header h1 {
-  font-size: 3.5em;
+  font-size: 3.5rem;
 }
 
 header h2 {
-  font-size: 1.6em;
+  font-size: 1.6rem;
 }
